# pdf-image-extract-annotate

./: .gitignore  LICENSE  MANIFEST.in  PYPI_PUBLISHING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/: basic_extraction.py  watermark_pdf.py
pdf_image_extract_annotate/: __init__.py  extractor.py  models.py  utils.py  watermarker.py
pdf_image_extract_annotate/utils/: __init__.py  blob_storage.py  image_processing.py  pdf_utils.py
tests/: __init__.py  test_blob_storage.py  test_extractor.py  test_image_processing.py  test_pdf_utils.py  test_watermarker.py
