[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-image-extract-annotate"
version = "1.0.0"
description = "Extract images from PDFs and create annotated versions with watermarks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Thijs Hakkenberg", email = "thijs.hakkenberg@ecolab.com"}
]
keywords = ["pdf", "image", "extraction", "watermark", "annotation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "PyMuPDF>=1.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
azure = ["azure-storage-blob>=12.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
pdf-extract-images = "pdf_image_extract_annotate.cli:main"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:fitz",
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]